--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@jup-ag/api": "^6.0.44",
     "@solana/kit": "^2.1.1",
-    "@solana/web3.js": "^1.95.2"
+    "@solana/web3.js": "^1.95.2",
+    "axios": "^1.10.0",
+    "bs58": "^6.0.0"
   }
 }
