--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@solana/kit": "^2.1.1",
     "@solana/web3.js": "^1.95.2",
     "axios": "^1.10.0",
-    "bs58": "^6.0.0"
+    "bs58": "^6.0.0",
+    "dotenv": "^17.2.0"
   }
 }
