--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@solana/web3.js": "^1.95.2",
     "axios": "^1.10.0",
     "bs58": "^6.0.0",
-    "dotenv": "^17.2.0"
+    "dotenv": "^17.2.0",
+    "node-telegram-bot-api": "^0.66.0"
   }
 }
