--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@jup-ag/api": "^6.0.44",
     "@solana/kit": "^2.1.1",
+    "@solana/spl-token": "^0.4.13",
     "@solana/web3.js": "^1.95.2",
     "axios": "^1.10.0",
     "bs58": "^6.0.0",
