--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bs58": "^6.0.0",
     "dotenv": "^17.2.0",
     "mongodb": "^6.18.0",
+    "node-cron": "^4.2.1",
     "node-telegram-bot-api": "^0.66.0"
   }
 }
